# slimage

./: Cargo.toml
src/: decoder.rs  graphics.rs  main.rs
src/shader/: 150_core.glslf  150_core.glslv
