[package]
name = "slimage"
version = "0.1.0"
authors = ["Dan Barry <dbarry@stevens.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0.22.3"
gfx = "^0.18.2"
gfx_window_glutin = "^0.31.0"
glutin = "^0.21.1"